--- a/fragmentlifecycle/src/main/res/layout/fragment_data.xml
+++ b/fragmentlifecycle/src/main/res/layout/fragment_data.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="base.android.fragmentlifecycle.MainActivity">
+    tools:context=".MainActivity">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
