explore recucle view

--- a/weatherappfragments/src/main/res/layout/fragment_params.xml
+++ b/weatherappfragments/src/main/res/layout/fragment_params.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/back"
     tools:context=".ParamsFragment">
-    <!--it says back.png is not a drawable....-->
 
     <EditText
         android:id="@+id/et_city"
@@ -26,6 +25,7 @@
 
     <Button
         android:id="@+id/btn_get"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
