--- a/myrecycleviewapp/src/main/res/layout/item.xml
+++ b/myrecycleviewapp/src/main/res/layout/item.xml
@@ -1,5 +1,6 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -15,19 +16,30 @@
         <!-- elevation - приподнятость элемента,
         cardCornerRadius - скругленность углов-->
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/picture"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@mipmap/ic_launcher_round"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:contentDescription="@string/item"
+                android:src="@mipmap/ic_launcher_round"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="@string/item"
-            android:textSize="42sp" />
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/item"
+                    android:textSize="42sp"
+                    android:layout_weight="4"/>
 
                 <!--<CheckBox-->
                     <!--android:id="@+id/like"-->
@@ -35,5 +47,6 @@
                     <!--android:layout_height="wrap_content"-->
                     <!--android:layout_weight="1" />-->
 
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
